updated aboutme.html with real info

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -3,7 +3,7 @@
   margin-right: auto;
   width: 650px;
 }
-
+a
 #greeting-container {
   margin-top: 20px;
 }
@@ -18,8 +18,16 @@
 
 .tabbed-paragraph {
     text-indent: 30px;
+    text-align:justify;
 }
 
 .bottom-paragraph {
     margin-bottom: 20px;
+    text-align:justify;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
